kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dingtalk
  name: dingtalk
  namespace: default
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: dingtalk
  sessionAffinity: None
  type: ClusterIP
