kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dingtalk
  namespace: dev

spec:
  selector:
    app: dingtalk
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  # type: NodePort
